--- a/flask/ldaflashcards/app/templates/add_card.html
+++ b/flask/ldaflashcards/app/templates/add_card.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
+
+<div class='content-wrapper'>
     <h1>Add Flashcard</h1>
     <form action="" method="post">
         {{ form.hidden_tag() }}
@@ -20,5 +22,6 @@
         </p>
         <p>{{ form.submit() }}</p>
     </form>
+</div>
 
 {% endblock %}
