--- a/flask/ldaflashcards/app/templates/edit_profile.html
+++ b/flask/ldaflashcards/app/templates/edit_profile.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class='content-wrapper'>
   <h1>Edit Profile</h1>
   <form action="" method="post">
     {{ form.hidden_tag() }}
@@ -20,4 +21,5 @@
     </p>
     <p>{{ form.submit() }}</p>
   </form>
+</div>
 {% endblock %}
