--- a/flask/ldaflashcards/app/templates/login.html
+++ b/flask/ldaflashcards/app/templates/login.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class='content-wrapper'>
     <h1>Sign In</h1>
     <form action ="" method="post">
       {{ form.hidden_tag() }}
@@ -22,4 +23,5 @@
       <p>{{ form.submit() }}</p>
     </form>
     <p>New User? <a href="{{ url_for('register') }}">Register</a></p>
+</div>
 {% endblock %}
