--- a/flask/ldaflashcards/app/templates/results.html
+++ b/flask/ldaflashcards/app/templates/results.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class='content-wrapper'>
   <table>
     <tr valign="top">
       <td><img src="{{ user.avatar(128) }}"></td>
@@ -24,3 +25,4 @@
     {% include '_post.html' %}
   {% endfor %}
 {% endblock %}
+</div>
